# multirender

./: Cargo.toml  README.md
crates/multirender/: Cargo.toml
crates/multirender/src/: README.md  lib.rs  null_backend.rs  recording.rs  types.rs
crates/multirender_serialize/: Cargo.toml
crates/multirender_serialize/src/: font_writer.rs  lib.rs
crates/multirender_serialize/tests/: serialize.rs
crates/multirender_skia/: Cargo.toml
crates/multirender_skia/src/: image_renderer.rs  metal.rs  opengl.rs  scene.rs  vulkan.rs  window_renderer.rs
crates/multirender_svg/: Cargo.toml
crates/multirender_svg/src/: lib.rs  render.rs  util.rs
crates/multirender_vello/: Cargo.toml
crates/multirender_vello/src/: custom_paint_source.rs  image_renderer.rs  lib.rs  scene.rs  window_renderer.rs
crates/multirender_vello_cpu/: Cargo.toml
crates/multirender_vello_cpu/src/: image_renderer.rs  lib.rs  scene.rs  window_renderer.rs
crates/multirender_vello_hybrid/: Cargo.toml
crates/multirender_vello_hybrid/src/: lib.rs  scene.rs  webgl_scene.rs  window_renderer.rs
crates/pixels_window_renderer/: Cargo.toml
crates/pixels_window_renderer/src/: lib.rs
crates/softbuffer_window_renderer/: Cargo.toml
crates/softbuffer_window_renderer/src/: lib.rs
crates/wgpu_context/: Cargo.toml
examples/bunnymark/: Cargo.toml
examples/bunnymark/src/: bunny.rs  main.rs
examples/serialize/: Cargo.toml
examples/serialize/src/: main.rs
examples/winit/: Cargo.toml
examples/winit/src/: main.rs
