[workspace]
members = [
  "crates/multirender",
  "crates/multirender_serialize",
  "crates/multirender_skia",
  "crates/multirender_vello",
  "crates/multirender_vello_cpu",
  "crates/multirender_vello_hybrid",
  "crates/multirender_svg",
  "crates/wgpu_context",
  "crates/pixels_window_renderer",
  "crates/softbuffer_window_renderer",
  "examples/winit",
  "examples/bunnymark",
  "examples/serialize",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
categories = ["gui"]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# MultiRender dependencies (in-repo)
multirender = { version = "0.1.0", path = "./crates/multirender" }
multirender_serialize = { version = "0.1.0", path = "./crates/multirender_serialize" }
multirender_skia = { version = "0.1.0", path = "./crates/multirender_skia" }
multirender_vello = { version = "0.1.0", path = "./crates/multirender_vello" }
multirender_vello_cpu = { version = "0.1.0", path = "./crates/multirender_vello_cpu" }
multirender_vello_hybrid = { version = "0.1.0", path = "./crates/multirender_vello_hybrid" }
multirender_svg = { version = "0.1.0", path = "./crates/multirender_svg" }
multirender_wgpu_context = { version = "0.1.0", path = "./crates/wgpu_context" }
multirender_pixels_window_renderer = { version = "0.1.0", path = "./crates/pixels_window_renderer" }
multirender_softbuffer_window_renderer = { version = "0.1.0", path = "./crates/softbuffer_window_renderer" }

# Serialization
serde = "1.0.228"
serde_json = "1.0"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sha2 = "0.10"
skera = "0.1"
read-fonts = "0.37"
ttf2woff2 = "0.11"
wuff = "0.2"

# Linebender
color = "0.3"
linebender_resource_handle = "0.1"
peniko = "0.6"
kurbo = "0.13"
vello = { version = "0.7", features = [ "wgpu" ] }
vello_cpu = { version = "0.0.6", default-features = false, features = ["std", "text", "u8_pipeline"] }
vello_hybrid = { version = "0.0.6" }
vello_common = { version = "0.0.6" }

# Rendering
wgpu = "27"
raw-window-handle = "0.6.0"
softbuffer = "0.4"
pixels = "0.15"

# SVG
usvg = { version = "0.46.0", default-features = false }
image = { version = "0.25", default-features = false }

# Other dependencies
debug_timer = "0.1.1"
rustc-hash = "2"
futures-util = "0.3.31"
futures-intrusive = "0.5.0"
pollster = "0.4"

# Dev-dependencies
winit = { version = "0.30.2", features = ["rwh_06"] }

# [patch.crates-io]
# vello = { path = "../vello/vello" }
# vello_cpu = { path = "../vello/sparse_strips/vello_cpu" }
# vello_hybrid = { path = "../vello/sparse_strips/vello_hybrid" }
# vello_common = { path = "../vello/sparse_strips/vello_common" }
