[package]
name = "multirender"
description = "2D Canvas abstraction"
version.workspace = true
documentation = "https://docs.rs/multirender"
license.workspace = true
edition.workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "kurbo/serde",
  "peniko/serde",
]

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }

# Serde
serde = { workspace = true, features = ["derive"], optional = true }
