[package]
name = "multirender_skia"
description = "Skia backend for multirender"
version.workspace = true
documentation = "https://docs.rs/multirender_skia"
license.workspace = true
edition.workspace = true

[features]
pixels_window_renderer = ["dep:multirender_pixels_window_renderer"]
softbuffer_window_renderer = ["dep:multirender_softbuffer_window_renderer"]
log_frame_times = ["debug_timer/enable", "multirender_pixels_window_renderer?/log_frame_times", "multirender_softbuffer_window_renderer?/log_frame_times"]
vulkan = ["skia-safe/vulkan"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
multirender_softbuffer_window_renderer = { workspace = true, optional = true }
multirender_pixels_window_renderer = { workspace = true, optional = true }
skia-safe = { version = "0.91.0", features = ["gl", "binary-cache"]}
oaty = "0.1"
hashbrown = "0.16.0"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
glutin = { version = "0.32.3", features = ["default", "wgl", "egl"] }
gl = "0.14.0"
ash = "^0.38.0"
ash-window = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "NSView", "NSResponder"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "UIView", "UIResponder"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = { version = "0.6.3", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CAMetalLayer"] }
skia-safe = { version = "0.91.0", features = ["metal", "binary-cache"] }
