[package]
name = "multirender_svg"
description = "Render SVGs with multirender"
version.workspace = true
documentation = "https://docs.rs/multirender-svg"
license.workspace = true
edition.workspace = true

[features]
default = ["text", "image_format_png", "image_format_gif", "image_format_jpeg", "image_format_webp"]

text = ["usvg/text", "usvg/memmap-fonts", "usvg/system-fonts"]

image = ["dep:image"]
image_format_png = ["image", "image/png"]
image_format_jpeg = ["image", "image/jpeg"]
image_format_gif = ["image", "image/gif"]
image_format_webp = ["image", "image/webp"]

[dependencies]
multirender = { workspace = true }
peniko = { workspace = true }
kurbo = { workspace = true }
usvg = { workspace = true, default-features = false }
image = { workspace = true, default-features = false, optional = true }
thiserror = "2"
