[package]
name = "multirender_vello"
description = "Vello backend for multirender"
version = "0.7.1"
documentation = "https://docs.rs/anyrender_vello"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
wgpu_context = { workspace = true }

debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
