[package]
name = "multirender_vello"
description = "Vello backend for multirender"
version.workspace = true
documentation = "https://docs.rs/multirender_vello"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
multirender_wgpu_context = { workspace = true }

debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
