[package]
name = "multirender_vello_cpu"
description = "vello_cpu backend for multirender"
version.workspace = true
documentation = "https://docs.rs/multirender_vello_cpu"
license.workspace = true
edition.workspace = true

[features]
pixels_window_renderer = ["dep:multirender_pixels_window_renderer"]
softbuffer_window_renderer = ["dep:multirender_softbuffer_window_renderer"]
multithreading = ["vello_cpu/multithreading"]
log_frame_times = [
  "debug_timer/enable",
  "multirender_softbuffer_window_renderer?/log_frame_times",
  "multirender_pixels_window_renderer?/log_frame_times",
]

# Caches image premultiplication, but the cache is never cleared
# Useful for benchmarking (as we expect to eventually eliminate this cost)
# but not recommended for use in production
experimental_image_cache = []

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }

# WindowRenderer backends
multirender_softbuffer_window_renderer = { workspace = true, optional = true }
multirender_pixels_window_renderer = { workspace = true, optional = true }

# External vello_cpu
vello_cpu = { workspace = true }

[package.metadata.docs.rs]
features = ["pixels_window_renderer", "softbuffer_window_renderer"]
