[package]
name = "multirender_vello_hybrid"
description = "vello_hybrid backend for multirender"
version = "0.2.2"
documentation = "https://docs.rs/anyrender_vello_hybrid"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]
webgl = ["vello_hybrid/webgl"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello_hybrid = { workspace = true }
vello_common = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
wgpu_context = { workspace = true }
