[package]
name = "multirender_vello_hybrid"
description = "vello_hybrid backend for multirender"
version.workspace = true
documentation = "https://docs.rs/multirender_vello_hybrid"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]
webgl = ["vello_hybrid/webgl"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
vello_hybrid = { workspace = true }
vello_common = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
rustc-hash = { workspace = true }
multirender_wgpu_context = { workspace = true }
