[package]
name = "pixels_window_renderer"
description = "MultiRender WindowRenderer backed by the pixels crate"
version = "0.2.0"
documentation = "https://docs.rs/pixels_window_renderer"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
pixels = { workspace = true }
