[package]
name = "multirender_pixels_window_renderer"
description = "MultiRender WindowRenderer backend by the pixels crate"
version.workspace = true
documentation = "https://docs.rs/multirender_pixels_window"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
pixels = { workspace = true }
