[package]
name = "softbuffer_window_renderer"
description = "MultiRender WindowRenderer backed by the softbuffer crate"
version = "0.2.1"
documentation = "https://docs.rs/softbuffer_window_renderer"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
softbuffer = { workspace = true }
