[package]
name = "multirender_softbuffer_window_renderer"
description = "MultiRender WindowRenderer backend by the softbuffer crate"
version.workspace = true
documentation = "https://docs.rs/multirender_softbuffer_window"
license.workspace = true
edition.workspace = true

[features]
log_frame_times = ["debug_timer/enable"]

[dependencies]
multirender = { workspace = true }
debug_timer = { workspace = true }
softbuffer = { workspace = true }
