[package]
name = "multirender_wgpu_context"
description = "Context for managing WGPU surfaces"
version.workspace = true
documentation = "https://docs.rs/multirender_wgpu_context"
license.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
futures-intrusive = { workspace = true }
