[package]
name = "bunnymark"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
image = { workspace = true, features = ["png"] }
multirender = { workspace = true }
multirender_vello = { workspace = true, features = ["log_frame_times"] }
multirender_vello_hybrid = { workspace = true, features = ["log_frame_times"] }
multirender_vello_cpu = { workspace = true, features = ["pixels_window_renderer", "multithreading", "experimental_image_cache", "log_frame_times"] }
multirender_skia = { workspace = true, features = ["log_frame_times"] }
multirender_pixels_window_renderer = { workspace = true }
fastrand = "2.3"
