[package]
name = "serialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
image = { workspace = true, features = ["png"] }
multirender = { workspace = true, features = ["serde"] }
multirender_serialize = { workspace = true }
multirender_vello_cpu = { workspace = true }
parley = { version = "0.7", default-features = false, features = ["std"] }
