[package]
name = "winit-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
winit = { workspace = true }
peniko = { workspace = true }
multirender = { workspace = true }
multirender_vello = { workspace = true }
multirender_skia = { workspace = true }
multirender_vello_hybrid = { workspace = true }
multirender_vello_cpu = { workspace = true, features = [
  "pixels_window_renderer",
  "softbuffer_window_renderer",
] }